[metadata]
name = quarkdown-mcp
version = attr: quarkdown_mcp.__version__
description = A Model Context Protocol (MCP) server for Quarkdown document processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/quarkdown-mcp
author = Quarkdown MCP Team
author_email = contact@quarkdown-mcp.dev
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Documentation

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    mcp>=1.0.0
    pathlib2>=2.3.0; python_version<'3.4'
    typing-extensions>=4.0.0; python_version<'3.8'

[options.packages.find]
where = src

[options.package_data]
quarkdown_mcp = *.json, *.yaml, *.yml, templates/*, config/*, py.typed

[options.entry_points]
console_scripts =
    quarkdown-mcp = quarkdown_mcp.server:main

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    pytest-xdist>=3.2.0
lint =
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    autoflake>=2.0.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    sphinx-autodoc-typehints>=1.22.0
performance =
    psutil>=5.9.0
    aiofiles>=23.0.0
    memory-profiler>=0.60.0
security =
    bandit>=1.7.0
    safety>=2.3.0
debug =
    ipdb>=0.13.0
    rich>=13.0.0
build =
    build>=0.10.0
    twine>=4.0.0
    wheel>=0.40.0
analysis =
    radon>=6.0.0
    xenon>=0.9.0
dev =
    quarkdown-mcp[test,lint,docs,performance,security,debug,build,analysis]
all =
    quarkdown-mcp[dev]

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    .mypy_cache,
    .pytest_cache,
    .tox,
    venv,
    env
max-complexity = 10
select = E,W,F,C
per-file-ignores =
    __init__.py:F401
    tests/*:S101,S106

# Coverage configuration for setup.cfg compatibility
[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */venv/*
    */virtualenv/*
    */.*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
show_missing = True
precision = 2

[coverage:html]
directory = htmlcov